fixes on the css on spacings

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,6 @@ h2 {
 .homepage-background {
   background: url(./images/IMG_0989.jpeg);
   background-size: cover;
-  background-repeat: no-repeat;
   min-height: 100vh;
   max-width: 100vw;
 }
@@ -53,7 +52,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0% 15% 15% 15%;
+  margin: 0% 15% 0% 15%;
 }
 
 button {
@@ -164,11 +163,11 @@ footer {
   }
 
   .option-container {
-    margin: 8% 15% 5% 0%;
+    margin: 5% 15% 5% 0%;
   }
 
   .options {
-    margin: 5% 5% 8% 15%;
+    margin: 5% 5% 6% 15%;
   }
 
   button {
@@ -180,11 +179,11 @@ footer {
 @media screen and (min-width: 725px) {
 
   .options {
-    margin: 5% 5% 5% 15%;
+    margin: 3% 5% 3% 15%;
   }
 
   .option-container {
-    margin: 5% 15% 5% 0%;
+    margin: 2% 15% 4% 0%;
   }
 
   button {
